--- a/INSTALL/grub/grub.cfg
+++ b/INSTALL/grub/grub.cfg
@@ -563,7 +563,7 @@ function efi_unsupport_menuentry {
 #############################################################
 #############################################################
 
-set VENTOY_VERSION="1.0.13B"
+set VENTOY_VERSION="1.0.14"
 
 # Default menu display mode, you can change it as you want.
 #    0: List mode   
