--- a/INSTALL/grub/grub.cfg
+++ b/INSTALL/grub/grub.cfg
@@ -89,6 +89,26 @@ function get_os_type {
         fi
     done
 
+    if [ "$vtoy_os" = "Linux" ]; then
+        if vt_strstr "$vt_system_id" "FreeBSD"; then
+            set vtoy_os=Unix
+            set vt_unix_type=FreeBSD
+        elif [ -e (loop)/bin/freebsd-version ]; then
+            set vtoy_os=Unix
+            set vt_unix_type=FreeBSD
+            
+            
+        elif [ -e (loop)/boot/kernel/kernel ]; then            
+            if file --is-x86-kfreebsd (loop)/boot/kernel/kernel; then
+                set vtoy_os=Unix
+                set vt_unix_type=FreeBSD
+            elif file --is-x86-knetbsd (loop)/boot/kernel/kernel; then
+                set vtoy_os=Unix
+                set vt_unix_type=NetBSD
+            fi
+        fi
+    fi
+
     if [ -n "${vtdebug_flag}" ]; then
         echo ISO is $vtoy_os
     fi
@@ -211,6 +231,129 @@ function distro_specify_initrd_file_phase2 {
     fi
 }
 
+function ventoy_get_ghostbsd_ver {
+
+    # vt_parse_iso_create_date $1/${chosen_path} vt_create_date    
+    # if regexp "^202005" "$vt_create_date"; then
+        # set vt_freebsd_ver=12.x
+    # fi
+    
+    set vt_freebsd_ver=12.x
+}
+
+function ventoy_get_freenas_ver {   
+    set vt_freebsd_ver=11.x
+
+    if [ -e (loop)/FreeNAS-MANIFEST ]; then
+        vt_parse_freenas_ver (loop)/FreeNAS-MANIFEST vt_freenas_ver
+        if regexp "^13\.[0-9]" "$vt_freenas_ver"; then
+            set vt_freebsd_ver=13.x
+        elif regexp "^12\.[0-9]" "$vt_freenas_ver"; then
+            set vt_freebsd_ver=12.x
+        elif regexp "^11\.[0-9]" "$vt_freenas_ver"; then
+            set vt_freebsd_ver=11.x
+        fi
+    fi
+}
+
+function ventoy_freebsd_proc {
+    if vt_strstr "$vt_volume_id" "GHOSTBSD"; then
+        ventoy_get_ghostbsd_ver $1 ${chosen_path}
+    elif vt_strstr "$vt_volume_id" "FREENAS"; then
+        ventoy_get_freenas_ver $1 ${chosen_path}   
+    elif regexp "^13_[0-9]" "$vt_volume_id"; then
+        set vt_freebsd_ver=13.x
+    elif regexp "^12_[0-9]" "$vt_volume_id"; then
+        set vt_freebsd_ver=12.x
+    elif regexp "^11_[0-9]" "$vt_volume_id"; then
+        set vt_freebsd_ver=11.x
+    elif regexp "^10_[0-9]" "$vt_volume_id"; then
+        set vt_freebsd_ver=10.x
+    elif regexp "^9_[0-9]" "$vt_volume_id"; then
+        set vt_freebsd_ver=9.x
+    elif [ -e (loop)/bin/freebsd-version ]; then
+        vt_unix_parse_freebsd_ver (loop)/bin/freebsd-version vt_userland_ver
+        if regexp "\"13\.[0-9]-" "$vt_userland_ver"; then
+            set vt_freebsd_ver=13.x
+        elif regexp "\"12\.[0-9]-" "$vt_userland_ver"; then
+            set vt_freebsd_ver=12.x
+        elif regexp "\"11\.[0-9]-" "$vt_userland_ver"; then
+            set vt_freebsd_ver=11.x
+        elif regexp "\"10\.[0-9]-" "$vt_userland_ver"; then
+            set vt_freebsd_ver=10.x
+        elif regexp "\"9\.[0-9]-" "$vt_userland_ver"; then
+            set vt_freebsd_ver=9.x
+        fi
+    elif [ -e (loop)/README.TXT ]; then
+        vt_1st_line (loop)/README.TXT vt_freebsd_line1
+        if regexp "FreeBSD 13\.[0-9]-" "$vt_freebsd_line1"; then
+            set vt_freebsd_ver=13.x
+        elif regexp "FreeBSD 12\.[0-9]-" "$vt_freebsd_line1"; then
+            set vt_freebsd_ver=12.x
+        elif regexp "FreeBSD 11\.[0-9]-" "$vt_freebsd_line1"; then
+            set vt_freebsd_ver=11.x
+        elif regexp "FreeBSD 10\.[0-9]-" "$vt_freebsd_line1"; then
+            set vt_freebsd_ver=10.x
+        elif regexp "FreeBSD 9\.[0-9]-" "$vt_freebsd_line1"; then
+            set vt_freebsd_ver=9.x
+        fi
+    elif vt_strstr "${chosen_path}" "MidnightBSD"; then
+        set vt_freebsd_ver=9.x
+    else
+        set vt_freebsd_ver=12.x
+    fi
+    
+    set vt_freebsd_bit=64
+    for file in "/boot/kernel/kernel" "/boot/kernel/kernel.gz"; do
+        if [ -e (loop)/$file ]; then    
+            if file --is-i386-kfreebsd (loop)/$file; then
+                set vt_freebsd_bit=32
+            fi
+            break
+        fi
+    done    
+
+    if [ -n "${vtdebug_flag}" ]; then
+        echo "This is FreeBSD $vt_freebsd_ver ${vt_freebsd_bit}bit"
+    fi
+    
+    unset vt_unix_mod_path
+    for file in "/COPYRIGHT" "/FreeNAS-MANIFEST" "/version"; do   
+        if [ -e (loop)${file} ]; then                    
+            set vt_unix_mod_path=${file}
+            break
+        fi
+    done
+    
+    vt_unix_replace_ko $vt_unix_mod_path (vtunix)/ventoy_unix/FreeBSD/geom_ventoy_ko/$vt_freebsd_ver/$vt_freebsd_bit/geom_ventoy.ko.xz
+    vt_unix_replace_conf FreeBSD ${1}${chosen_path} 
+}
+
+function ventoy_unix_comm_proc {
+    vt_unix_reset
+    
+    if [ "$ventoy_compatible" = "NO" ]; then
+        loopback vtunix $vtoy_efi_part/ventoy/ventoy_unix.cpio
+        
+        if [ "$vt_unix_type" = "FreeBSD" ]; then
+            ventoy_freebsd_proc $1 ${chosen_path}        
+        elif [ "$vt_unix_type" = "NetBSD" ]; then
+            echo "NetBSD not supported"
+            
+            
+            
+        else
+            if [ -n "${vtdebug_flag}" ]; then
+                echo "Unknown unix type"
+            fi
+        fi
+    fi
+    
+    vt_unix_chain_data ${1}${chosen_path}    
+    ventoy_debug_pause
+}
+
+
 function uefi_windows_menu_func {
     vt_windows_reset
 
@@ -330,6 +473,18 @@ function uefi_linux_menu_func {
     fi
 }
 
+function uefi_unix_menu_func {
+    ventoy_unix_comm_proc $1 ${chosen_path}
+    
+    if [ -n "$vtoy_chain_mem_addr" ]; then
+        ventoy_cli_console
+        chainloader ${vtoy_path}/ventoy_x64.efi  env_param=${env_param} isoefi=${LoadIsoEfiDriver} FirstTry=${FirstTryBootFile} ${vtdebug_flag} mem:${vtoy_chain_mem_addr}:size:${vtoy_chain_mem_size}
+        boot
+    else
+        echo "chain empty failed"
+        ventoy_pause
+    fi
+}
 
 function uefi_iso_menu_func {
 
@@ -358,6 +513,7 @@ function uefi_iso_menu_func {
     fi
 
     loopback loop ${1}${chosen_path}
+    vt_parse_iso_volume ${1}${chosen_path} vt_system_id vt_volume_id
     get_os_type (loop)
     
     if [ -d (loop)/EFI ]; then
@@ -382,6 +538,8 @@ function uefi_iso_menu_func {
     if [ "$vtoy_os" = "Windows" ]; then
         vt_check_compatible_pe (loop)        
         uefi_windows_menu_func  $1 ${chosen_path}
+    elif [ "$vtoy_os" = "Unix" ]; then
+        uefi_unix_menu_func $1 ${chosen_path}
     else
         uefi_linux_menu_func  $1 ${chosen_path}
     fi
@@ -501,6 +659,20 @@ function legacy_linux_menu_func {
     fi
 }
 
+
+function legacy_unix_menu_func {    
+    ventoy_unix_comm_proc $1 ${chosen_path}
+    
+    if [ -n "$vtoy_chain_mem_addr" ]; then
+        linux16   $vtoy_path/ipxe.krn ${vtdebug_flag}  mem:${vtoy_chain_mem_addr}:size:${vtoy_chain_mem_size}
+        boot
+    else
+        echo "chain empty failed"
+        ventoy_pause
+    fi
+}
+
+
 function legacy_iso_menu_func {
 
     if [ -d (loop)/ ]; then
@@ -519,6 +691,7 @@ function legacy_iso_menu_func {
     fi
     
     loopback loop ${1}${chosen_path}
+    vt_parse_iso_volume ${1}${chosen_path} vt_system_id vt_volume_id
     get_os_type (loop)
 
     if [ -n "$vtcompat" ]; then
@@ -535,6 +708,8 @@ function legacy_iso_menu_func {
     if [ "$vtoy_os" = "Windows" ]; then
         vt_check_compatible_pe (loop)        
         legacy_windows_menu_func  $1 ${chosen_path}
+    elif [ "$vtoy_os" = "Unix" ]; then
+        legacy_unix_menu_func $1 ${chosen_path}
     else
         legacy_linux_menu_func  $1 ${chosen_path}
     fi
@@ -550,6 +725,9 @@ function legacy_iso_memdisk {
 }
 
 function iso_common_menuentry {
+    unset vt_system_id
+    unset vt_volume_id
+    
     if [ "$grub_platform" = "pc" ]; then
         if vt_check_mode 0; then
             legacy_iso_memdisk $vtoy_iso_part
@@ -624,7 +802,7 @@ function efi_unsupport_menuentry {
 #############################################################
 #############################################################
 
-set VENTOY_VERSION="1.0.17"
+set VENTOY_VERSION="1.0.18"
 
 # Default menu display mode, you can change it as you want.
 #    0: List mode   
