--- a/INSTALL/grub/grub.cfg
+++ b/INSTALL/grub/grub.cfg
@@ -1202,9 +1202,9 @@ set VTOY_F5_CMD="ventoy_diagnosis"
 set VTOY_F6_CMD="ventoy_ext_menu"
 
 if [ "$grub_platform" = "pc" ]; then
-    set VTOY_TEXT_MENU_VER="Ventoy $VENTOY_VERSION BIOS  www.ventoy.net"
+    set VTOY_TEXT_MENU_VER="Ventoy $VENTOY_VERSION BIOS  By RDP"
 else
-    set VTOY_TEXT_MENU_VER="Ventoy $VENTOY_VERSION UEFI  www.ventoy.net"
+    set VTOY_TEXT_MENU_VER="Ventoy $VENTOY_VERSION UEFI  By RDP"
 fi
 
 vt_device $root  vtoy_dev
